--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -253,3 +253,472 @@ textarea {
   letter-spacing: 0.2em;
   text-transform: uppercase;
 }
+
+.ReactCodeMirror {
+	border: 1px solid #ccc;
+}
+//colors
+$black: black;
+$white: white;
+$color_alto_approx: #ddd;
+$color_black_haze_approx: #f7f7f7;
+$color_mountain_mist_approx: #999;
+$silver:  silver;
+$color_pastel_green_approx: #7e7;
+$color_celeste_approx: #ccc;
+$blue: blue;
+$color_japanese_laurel_approx: #090;
+$color_valencia_approx: #d44;
+$color_forest_green_approx: #292;
+$color_purple_approx: #708;
+$color_blue_gem_approx: #219;
+$color_jewel_approx: #164;
+$color_endeavour_approx: #05a;
+$color_salem_approx: #085;
+$color_rich_gold_approx: #a50;
+$color_tamarillo_approx: #a11;
+$color_international_orange_approx: #f50;
+$color_fuscous_gray_approx: #555;
+$color_gurkha_approx: #997;
+$color_dark_blue_approx: #00c;
+$red: #f00;
+$green: #0f0;
+$color_torch_red_approx: #f22;
+$color_pizazz_30_approx: rgba(255, 150, 0, .3);
+$color_solitude_approx: #e8f2ff;
+$color_moon_raker_approx: #d7d4f0;
+$color_milan_approx: #ffa;
+$yellow_40: rgba(255, 255, 0, .4);
+
+//fonts
+$font_0: monospace;
+
+.CodeMirror {
+	font-family: $font_0;
+	height: 300px;
+	color: $black;
+	position: relative;
+	overflow: hidden;
+	background: $white;
+	pre {
+		padding: 0 4px;
+		//Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+		border-radius: 0;
+		border-width: 0;
+		background: transparent;
+		font-family: inherit;
+		font-size: inherit;
+		margin: 0;
+		white-space: pre;
+		word-wrap: normal;
+		line-height: inherit;
+		color: inherit;
+		z-index: 2;
+		position: relative;
+		overflow: visible;
+		font-variant-ligatures: contextual;
+	}
+	div.CodeMirror-secondarycursor {
+		border-left: 1px solid $silver;
+	}
+}
+.CodeMirror-lines {
+	padding: 4px 0;
+	cursor: text;
+	min-height: 1px;
+}
+.CodeMirror-scrollbar-filler {
+	background-color: $white;
+	position: absolute;
+	z-index: 6;
+	display: none;
+	right: 0;
+	bottom: 0;
+}
+.CodeMirror-gutter-filler {
+	background-color: $white;
+	position: absolute;
+	z-index: 6;
+	display: none;
+	left: 0;
+	bottom: 0;
+}
+.CodeMirror-gutters {
+	border-right: 1px solid $color_alto_approx;
+	background-color: $color_black_haze_approx;
+	white-space: nowrap;
+	position: absolute;
+	left: 0;
+	top: 0;
+	min-height: 100%;
+	z-index: 3;
+	//Instead of the line below you could use @include box-sizing($bs)
+	box-sizing: content-box;
+}
+.CodeMirror-linenumbers {
+}
+.CodeMirror-linenumber {
+	padding: 0 3px 0 5px;
+	min-width: 20px;
+	text-align: right;
+	color: $color_mountain_mist_approx;
+	white-space: nowrap;
+	//Instead of the line below you could use @include box-sizing($bs)
+	box-sizing: content-box;
+}
+.CodeMirror-guttermarker {
+	color: $black;
+}
+.CodeMirror-guttermarker-subtle {
+	color: $color_mountain_mist_approx;
+}
+.CodeMirror-cursor {
+	border-left: 1px solid $black;
+	border-right: none;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+.cm-fat-cursor {
+	.CodeMirror-cursor {
+		width: auto;
+		border: 0 !important;
+		background: $color_pastel_green_approx;
+	}
+	div.CodeMirror-cursors {
+		z-index: 1;
+	}
+}
+.cm-animate-fat-cursor {
+	width: auto;
+	border: 0;
+	animation: blink 1.06s steps(1) infinite;
+	background-color: $color_pastel_green_approx;
+}
+@-moz-keyframes blink {
+	0% {
+	}
+	50% {
+		background-color: transparent;
+	}
+	100% {
+	}
+}
+@-webkit-keyframes blink {
+	0% {
+	}
+	50% {
+		background-color: transparent;
+	}
+	100% {
+	}
+}
+@keyframes blink {
+	0% {
+	}
+	50% {
+		background-color: transparent;
+	}
+	100% {
+	}
+}
+.cm-tab {
+	display: inline-block;
+	text-decoration: inherit;
+}
+.CodeMirror-rulers {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: -50px;
+	bottom: -20px;
+	overflow: hidden;
+}
+.CodeMirror-ruler {
+	border-left: 1px solid $color_celeste_approx;
+	top: 0;
+	bottom: 0;
+	position: absolute;
+}
+.cm-s-default {
+	.cm-header {
+		color: $blue;
+	}
+	.cm-quote {
+		color: $color_japanese_laurel_approx;
+	}
+	.cm-keyword {
+		color: $color_purple_approx;
+	}
+	.cm-atom {
+		color: $color_blue_gem_approx;
+	}
+	.cm-number {
+		color: $color_jewel_approx;
+	}
+	.cm-def {
+		color: $blue;
+	}
+	.cm-variable {
+	}
+	.cm-punctuation {
+	}
+	.cm-property {
+	}
+	.cm-operator {
+	}
+	.cm-variable-2 {
+		color: $color_endeavour_approx;
+	}
+	.cm-variable-3 {
+		color: $color_salem_approx;
+	}
+	.cm-comment {
+		color: $color_rich_gold_approx;
+	}
+	.cm-string {
+		color: $color_tamarillo_approx;
+	}
+	.cm-string-2 {
+		color: $color_international_orange_approx;
+	}
+	.cm-meta {
+		color: $color_fuscous_gray_approx;
+	}
+	.cm-qualifier {
+		color: $color_fuscous_gray_approx;
+	}
+	.cm-builtin {
+		color: $color_blue_gem_approx;
+	}
+	.cm-bracket {
+		color: $color_gurkha_approx;
+	}
+	.cm-tag {
+		color: $color_japanese_laurel_approx;
+	}
+	.cm-attribute {
+		color: $color_dark_blue_approx;
+	}
+	.cm-hr {
+		color: $color_mountain_mist_approx;
+	}
+	.cm-link {
+		color: $color_dark_blue_approx;
+	}
+	.cm-error {
+		color: $red;
+	}
+}
+.cm-negative {
+	color: $color_valencia_approx;
+}
+.cm-positive {
+	color: $color_forest_green_approx;
+}
+.cm-header {
+	font-weight: bold;
+}
+.cm-strong {
+	font-weight: bold;
+}
+.cm-em {
+	font-style: italic;
+}
+.cm-link {
+	text-decoration: underline;
+}
+.cm-strikethrough {
+	text-decoration: line-through;
+}
+.cm-invalidchar {
+	color: $red;
+}
+.CodeMirror-composing {
+	border-bottom: 2px solid;
+}
+div {
+	&.CodeMirror-cursors {
+		visibility: hidden;
+		position: relative;
+		z-index: 3;
+	}
+	&.CodeMirror-dragcursors {
+		visibility: visible;
+	}
+	&.CodeMirror span {
+		&.CodeMirror-matchingbracket {
+			color: $green;
+		}
+		&.CodeMirror-nonmatchingbracket {
+			color: $color_torch_red_approx;
+		}
+	}
+}
+.CodeMirror-matchingtag {
+	background: $color_pizazz_30_approx;
+}
+.CodeMirror-activeline-background {
+	background: $color_solitude_approx;
+}
+.CodeMirror-scroll {
+	overflow: scroll !important;
+	margin-bottom: -30px;
+	margin-right: -30px;
+	padding-bottom: 30px;
+	height: 100%;
+	outline: none;
+	position: relative;
+	//Instead of the line below you could use @include box-sizing($bs)
+	box-sizing: content-box;
+}
+.CodeMirror-sizer {
+	position: relative;
+	border-right: 30px solid transparent;
+	//Instead of the line below you could use @include box-sizing($bs)
+	box-sizing: content-box;
+}
+.CodeMirror-vscrollbar {
+	position: absolute;
+	z-index: 6;
+	display: none;
+	right: 0;
+	top: 0;
+	overflow-x: hidden;
+	overflow-y: scroll;
+}
+.CodeMirror-hscrollbar {
+	position: absolute;
+	z-index: 6;
+	display: none;
+	bottom: 0;
+	left: 0;
+	overflow-y: hidden;
+	overflow-x: scroll;
+}
+.CodeMirror-gutter {
+	white-space: normal;
+	height: 100%;
+	display: inline-block;
+	vertical-align: top;
+	margin-bottom: -30px;
+	//Instead of the line below you could use @include box-sizing($bs)
+	box-sizing: content-box;
+}
+.CodeMirror-gutter-wrapper {
+	position: absolute;
+	z-index: 4;
+	background: none !important;
+	border: none !important;
+	::selection {
+		background-color: transparent;
+	}
+	::-moz-selection {
+		background-color: transparent;
+	}
+}
+.CodeMirror-gutter-background {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	z-index: 4;
+}
+.CodeMirror-gutter-elt {
+	position: absolute;
+	cursor: default;
+	z-index: 4;
+}
+.CodeMirror-linebackground {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 0;
+}
+.CodeMirror-linewidget {
+	position: relative;
+	z-index: 2;
+	overflow: auto;
+}
+.CodeMirror-widget {
+}
+.CodeMirror-code {
+	outline: none;
+}
+.CodeMirror-measure {
+	position: absolute;
+	width: 100%;
+	height: 0;
+	overflow: hidden;
+	visibility: hidden;
+	pre {
+		position: static;
+	}
+}
+.CodeMirror-focused {
+	.CodeMirror-selected {
+		background: $color_moon_raker_approx;
+	}
+	div.CodeMirror-cursors {
+		visibility: visible;
+	}
+}
+.CodeMirror-selected {
+	background: $color_alto_approx;
+}
+.CodeMirror-crosshair {
+	cursor: crosshair;
+}
+.CodeMirror-line::selection {
+	background: $color_moon_raker_approx;
+}
+.CodeMirror-line {
+	> span::selection {
+		background: $color_moon_raker_approx;
+	}
+	> span {
+		> span::selection {
+			background: $color_moon_raker_approx;
+		}
+		> span::-moz-selection {
+			background: $color_moon_raker_approx;
+		}
+	}
+	> span::-moz-selection {
+		background: $color_moon_raker_approx;
+	}
+}
+.CodeMirror-line::-moz-selection {
+	background: $color_moon_raker_approx;
+}
+.cm-searching {
+	background: $color_milan_approx;
+	background: $yellow_40;
+}
+.cm-force-border {
+	padding-right: .1px;
+}
+@media print {
+	.CodeMirror div.CodeMirror-cursors {
+		visibility: hidden;
+	}
+}
+.CodeMirror-overwrite .CodeMirror-cursor {
+}
+.CodeMirror-wrap pre {
+	word-wrap: break-word;
+	white-space: pre-wrap;
+	//Instead of the line below you could use @include word-break($value)
+	word-break: normal;
+}
+.CodeMirror-rtl pre {
+	direction: rtl;
+}
+.cm-tab-wrap-hack:after {
+	content: '';
+}
+span.CodeMirror-selectedtext {
+	background: none;
+}
+// @import (inline) "../../node_modules/codemirror/lib/codemirror.css";
