--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -256,6 +256,8 @@ textarea {
 
 .ReactCodeMirror {
 	border: 1px solid #ccc;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 //colors
 $black: black;
