--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -296,7 +296,7 @@ $font_0: monospace;
 
 .CodeMirror {
 	font-family: $font_0;
-	height: 300px;
+	height: 100%;
 	color: $black;
 	position: relative;
 	overflow: hidden;
