--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5980,7 +5980,7 @@ textarea {
 
 .CodeMirror {
   font-family: monospace;
-  height: 300px;
+  height: 100%;
   color: black;
   position: relative;
   overflow: hidden;
