--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -31,6 +31,7 @@ $panel-body-padding: 30px;
 
 @import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CRaleway:100,300,600,700,800");
 @import "vendor/bootstrap";
+@import "./homepage";
 
 // TODO Include the CSS
 // @import "codemirror.css";
