move TryGit into Modal

--- a/public/css/_homepage.scss
+++ b/public/css/_homepage.scss
@@ -1,4 +1,4 @@
-.HomePage {
+.modal-body {
   .try-git {
     width: 100%;
     min-height: 100%;
@@ -10,4 +10,8 @@
       height: 1260px;
     }
   }
+}
+
+.custom-modal {
+  width: 90%;
 }
