--- a/public/css/_homepage.scss
+++ b/public/css/_homepage.scss
@@ -2,13 +2,8 @@
   .try-git {
     width: 100%;
     min-height: 100%;
-    height: 1000px;
+    height: 75vh;
     border: none;
-    overflow: hidden;
-
-    @media (max-width: 970px) {
-      height: 1260px;
-    }
   }
 }
 
