--- a/public/css/_homepage.scss
+++ b/public/css/_homepage.scss
@@ -1,23 +1,27 @@
 .tutorial-modal {
   width: 90%;
-  margin-top: 5vh;
-  margin-bottom: 0vh;
+  margin-top: 3vh;
+  margin-bottom: 0;
 
   .modal-header {
-    height: 13vh;
+    height: 10vh;
     padding: 2vh;
   }
 
   .modal-footer {
-    height: 12vh;
-    padding: 3vh;
+    height: auto;
+    padding: 0 2vh 2vh;
+
   }
 
   .modal-body {
+    padding-bottom: 0;
+    padding-top: 0;
+
     iframe {
       width: 100%;
       min-height: 100%;
-      height: 60vh;
+      height: 72vh;
       border: none;
     }
   }
