reduce Preview to .logo and .title

--- a/public/css/_news-page.scss
+++ b/public/css/_news-page.scss
@@ -37,7 +37,15 @@
     }
   }
 
-  .well div {
+  .well {
+    div {
     display: none;
+    }
+    .short-preview {
+      display: block;
+      div {
+        display: block;
+      }
+    }
   }
 }
