refactor: only show .logo and .title in .short-preview

--- a/public/css/_news-page.scss
+++ b/public/css/_news-page.scss
@@ -43,7 +43,8 @@
     }
     .short-preview {
       display: block;
-      div {
+      .logo,
+      .title {
         display: block;
       }
       img {
