--- a/public/css/_news-page.scss
+++ b/public/css/_news-page.scss
@@ -48,6 +48,13 @@
       .title {
         display: block;
       }
+
+      .title {
+        text-align: center;
+        height: 150px;
+        display: flex;
+        align-items: center;
+      }
       img {
         position: absolute;
       }
