--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6626,6 +6626,11 @@ span.CodeMirror-selectedtext {
   .news-page .well .short-preview .logo,
   .news-page .well .short-preview .title {
     display: block; }
+  .news-page .well .short-preview .title {
+    text-align: center;
+    height: 150px;
+    display: flex;
+    align-items: center; }
   .news-page .well .short-preview img {
     position: absolute; }
 
