--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6542,69 +6542,15 @@ span.CodeMirror-selectedtext {
         position: absolute;
         border: none; } }
 
+.news-page div {
+  width: 100%; }
 .news-page #TableComponent {
   display: none; }
 .news-page #ProjectPreview {
-  width: 100%; }
-.news-page .well {
-  width: 23.72881%;
-  float: left; }
-  .news-page .well:nth-child(4n + 1) {
-    margin-left: 0;
-    margin-right: -100%;
-    clear: both;
-    margin-left: 0; }
-  .news-page .well:nth-child(4n + 2) {
-    margin-left: 25.42373%;
-    margin-right: -100%;
-    clear: none; }
-  .news-page .well:nth-child(4n + 3) {
-    margin-left: 50.84746%;
-    margin-right: -100%;
-    clear: none; }
-  .news-page .well:nth-child(4n + 4) {
-    margin-left: 76.27119%;
-    margin-right: -100%;
-    clear: none; }
-  @media (max-width: 992px) {
-    .news-page .well {
-      width: 32.20339%;
-      float: left; }
-      .news-page .well:nth-child(3n + 1) {
-        margin-left: 0;
-        margin-right: -100%;
-        clear: both;
-        margin-left: 0; }
-      .news-page .well:nth-child(3n + 2) {
-        margin-left: 33.89831%;
-        margin-right: -100%;
-        clear: none; }
-      .news-page .well:nth-child(3n + 3) {
-        margin-left: 67.79661%;
-        margin-right: -100%;
-        clear: none; } }
-  @media (max-width: 768px) {
-    .news-page .well {
-      width: 49.15254%;
-      float: left; }
-      .news-page .well:nth-child(2n + 1) {
-        margin-left: 0;
-        margin-right: -100%;
-        clear: both;
-        margin-left: 0; }
-      .news-page .well:nth-child(2n + 2) {
-        margin-left: 50.84746%;
-        margin-right: -100%;
-        clear: none; } }
-  @media (max-width: 480px) {
-    .news-page .well {
-      width: 91.52542%;
-      float: left; }
-      .news-page .well:nth-child(1n + 1) {
-        margin-left: 0;
-        margin-right: -100%;
-        clear: both;
-        margin-left: 0; } }
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
 .news-page .logo {
   display: block;
   width: 100%;
@@ -6617,21 +6563,27 @@ span.CodeMirror-selectedtext {
   padding: 0;
   overflow: hidden; }
   .news-page .title h1 {
-    font-size: 30px; }
-.news-page .well hr,
-.news-page .well div {
-  display: none; }
-.news-page .well .short-preview {
-  display: block; }
-  .news-page .well .short-preview .logo,
-  .news-page .well .short-preview .title {
+    font-size: 30px;
+    width: 100%; }
+.news-page .well {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  align-content: center; }
+  .news-page .well hr,
+  .news-page .well div {
+    display: none; }
+  .news-page .well .short-preview {
     display: block; }
-  .news-page .well .short-preview .title {
-    text-align: center;
-    height: 150px;
-    display: flex;
-    align-items: center; }
-  .news-page .well .short-preview img {
-    position: absolute; }
+    .news-page .well .short-preview .logo,
+    .news-page .well .short-preview .title {
+      display: block; }
+    .news-page .well .short-preview .title {
+      text-align: center;
+      height: 100%;
+      display: flex;
+      align-items: center; }
+    .news-page .well .short-preview img {
+      position: absolute; }
 
 /*# sourceMappingURL=main.css.map */
