add white border around Title

--- a/public/css/_news-page.scss
+++ b/public/css/_news-page.scss
@@ -30,6 +30,7 @@
     h1 {
       font-size: 30px;
       width: 100%;
+      text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
     }
   }
 
