--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6564,7 +6564,8 @@ span.CodeMirror-selectedtext {
   overflow: hidden; }
   .news-page .title h1 {
     font-size: 30px;
-    width: 100%; }
+    width: 100%;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; }
 .news-page .well {
   width: 300px;
   height: 300px;
