--- a/public/css/_news-page.scss
+++ b/public/css/_news-page.scss
@@ -7,38 +7,15 @@
     display: none;
   }
   #ProjectPreview{
-      width: 100%;
       display: flex;
-      flex-direction: row;
       flex-wrap: wrap;
   }
 
-  .logo {
-    display: block;
-    width: 100%;
-    height: auto;
-    img {
-    width: 100%;
-    }
-  }
-
-  .title {
-    display: block;
-    width: 100%;
-    padding: 0;
-    overflow: hidden;
-    h1 {
-      font-size: 30px;
-      width: 100%;
-      text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
-    }
-  }
 
   .well {
     width: 300px;
     height: 300px;
     display: flex;
-    align-content: center;
 
     hr,
     div {
@@ -46,19 +23,28 @@
     }
     .short-preview {
       display: block;
-      .logo,
-      .title {
+      .logo {
         display: block;
+        height: auto;
+        max-height: 100%;
+        img {
+          width: 100%;
+          position: absolute;
+        }
       }
 
       .title {
-        text-align: center;
-        height: 100%;
         display: flex;
+        height: 100%;
+        overflow: hidden;
+        text-align: center;
         align-items: center;
-      }
-      img {
-        position: absolute;
+        padding: 0;
+        h1 {
+          font-size: 30px;
+          width: 100%;
+          text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+        }
       }
     }
   }
