make View Button visible

--- a/public/css/_news-page.scss
+++ b/public/css/_news-page.scss
@@ -48,5 +48,12 @@
         }
       }
     }
+
+    .row, .col-sm-3 {
+      display: block;
+      p {
+        float: left !important;
+      }
+    }
   }
 }
