--- a/public/css/_news-page.scss
+++ b/public/css/_news-page.scss
@@ -27,6 +27,7 @@
       .logo {
         display: block;
         height: auto;
+        padding: 0;
         img {
           width: 100%;
           max-height: 300px;
@@ -59,6 +60,7 @@
     .row:first-of-type{
       width: 0;
       z-index: 1;
+      margin: 0;
     }
   }
 }
