--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6560,7 +6560,8 @@ span.CodeMirror-selectedtext {
     display: block; }
     .news-page .well .short-preview .logo {
       display: block;
-      height: auto; }
+      height: auto;
+      padding: 0; }
       .news-page .well .short-preview .logo img {
         width: 100%;
         max-height: 300px;
@@ -6582,6 +6583,7 @@ span.CodeMirror-selectedtext {
       float: left !important; }
   .news-page .well .row:first-of-type {
     width: 0;
-    z-index: 1; }
+    z-index: 1;
+    margin: 0; }
 
 /*# sourceMappingURL=main.css.map */
