--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6490,53 +6490,51 @@ span.CodeMirror-selectedtext {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff89cdef',endColorstr='#ff81bfde',GradientType=0);
     opacity: 1; }
 
-.tutorial-modal {
+.about .tutorial-modal {
   width: 90%;
   margin-top: 3vh;
   margin-bottom: 0; }
-  .tutorial-modal .modal-header {
+  .about .tutorial-modal .modal-header {
     height: 10vh;
     padding: 2vh; }
-  .tutorial-modal .modal-footer {
+  .about .tutorial-modal .modal-footer {
     height: auto;
     padding: 0 2vh 2vh; }
-  .tutorial-modal .modal-body {
+  .about .tutorial-modal .modal-body {
     padding-bottom: 0;
     padding-top: 0; }
-    .tutorial-modal .modal-body iframe {
+    .about .tutorial-modal .modal-body iframe {
       width: 100%;
       min-height: 100%;
       height: 72vh;
       border: none; }
-
-.tutorial {
+.about .tutorial {
   width: 50%; }
   @media (max-width: 992px) {
-    .tutorial {
+    .about .tutorial {
       width: 90%; } }
-
-.logo {
+.about .logo {
   width: 480px;
   height: 480px; }
-  .logo iframe {
+  .about .logo iframe {
     width: 480px;
     height: 480px;
     position: absolute;
     border: none; }
   @media (max-width: 992px) {
-    .logo {
+    .about .logo {
       width: 360px;
       height: 360px; }
-      .logo iframe {
+      .about .logo iframe {
         width: 360px;
         height: 360px;
         position: absolute;
         border: none; } }
   @media (max-width: 768px) {
-    .logo {
+    .about .logo {
       width: 120px;
       height: 120px; }
-      .logo iframe {
+      .about .logo iframe {
         width: 120px;
         height: 120px;
         position: absolute;
