--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title= title
+    title= "Code Connect"
     link(rel='stylesheet', href='/css/main.css')
     link(rel="apple-touch-icon", sizes="180x180", href="/icons/apple-touch-icon.png")
     link(rel="icon", type="image/png", sizes="32x32", href="/icons/favicon-32x32.png")
