added google analytics

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,14 @@ html
     #app!= html
     script.
       window.INITIAL_STATE = !{JSON.stringify(initialState)}
+    script.
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='https://www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-106770794-1','auto');ga('send','pageview');
+
 
     script(src='/js/lib/jquery.js')
     script(src='/js/lib/bootstrap.js')
