--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,5 +28,6 @@ html
 
 
     script(src='/js/lib/jquery.js')
+    script(src='/js/lib/popper.js')
     script(src='/js/lib/bootstrap.js')
     script(src='/js/bundle.js')
