--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -1,7 +1,12 @@
 .container{
-  width: 980px;
+  // width: 980px;
   margin-right: auto;
   margin-left: auto;
+}
+
+.whiteContainer{
+  background: white;
+  border-radius: 10px;
 }
 
 .roundpanel{
