--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -10,8 +10,9 @@
 }
 
 .newsPageSinglePanel {
-  padding: 20px;
-  height: 200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 210px;
   background: white;
   max-width: 400px;
   margin: 10px auto;
