--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5981,10 +5981,11 @@ textarea {
   background: white;
   border-radius: 10px; }
 
+.myWrapper {
+  padding-left: 10px;
+  padding-right: 10px; }
+
 .newsPageSinglePanel {
-  padding-left: 20px;
-  padding-right: 20px;
-  height: 210px;
   background: white;
   max-width: 400px;
   margin: 10px auto;
@@ -5994,6 +5995,7 @@ textarea {
     color: #2ec866; }
 
 .textBox {
+  padding-bottom: 10px;
   line-height: 2.5ex;
   height: 15ex;
   /* 2.5ex for each visible line */
@@ -6027,7 +6029,7 @@ textarea {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  max-width: 300px; }
+  max-width: auto; }
 
 .clear {
   clear: both; }
