--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -6,7 +6,7 @@ $link-hover-decoration: none;
 $brand-success: #29b35b;
 $brand-danger: #b61b17;
 
-$font-family-base: 'Ubuntu', monospace;
+$font-family-base: "Ubuntu", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $headings-font-weight: 600;
 
 $alert-info-border: #31708f;
