--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= "Code Connect"
     link(rel='stylesheet', href='/css/main.css')
-    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=PT+Sans|Ubuntu:400|Roboto")
     link(rel="apple-touch-icon", sizes="180x180", href="/icons/apple-touch-icon.png")
     link(rel="icon", type="image/png", sizes="32x32", href="/icons/favicon-32x32.png")
     link(rel="icon", type="image/png", sizes="16x16", href="/icons/favicon-16x16.png")
