--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -10,8 +10,7 @@
 }
 
 .myWrapper  {
-  padding-left:10px;
-  padding-right:10px;
+  padding: 10px;
 }
 
 .newsPageSinglePanel {
@@ -68,6 +67,8 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   max-width: auto;
+  color: #1d7cf4;
+
 }
 
 .clear {
