changed profil view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6057,6 +6057,10 @@ textarea {
   display: block;
   float: right; }
 
+.profilView {
+  margin: auto;
+  padding-top: 40px; }
+
 .ReactCodeMirror {
   border: 1px solid #ccc;
   width: 85%;
