huge change: updated the design and changed backend

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -33,6 +33,7 @@ $panel-body-padding: 30px;
 @import "vendor/bootstrap";
 @import "bootstrap";
 @import "base";
+@import "projectCards";
 @import "codemirror";
 @import "vendor/susy/susy";
 @import "about";
