--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -32,18 +32,6 @@
   color: #2ec866;
 }
 
-.textBox {
-  padding-bottom: 10px;
-  line-height: 2.5ex;
-  height: 15ex;
-  /* 2.5ex for each visible line */
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 6;
-  -webkit-box-orient: vertical;
-  color: grey;
-}
-
 .roundpanel {
   border-radius: 10px;
   padding: 0 50px 50px;
@@ -64,18 +52,10 @@
 
 .imageWrapper {
   display: inline;
-  width: 50px;
-  height: 50px;
-  margin-right: 15px;
+  width: 75px;
+  height: 75px;
   float: left;
-}
-
-.headerWrapper {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  max-width: auto;
-  color: #1d7cf4;
+  margin: auto 10px auto auto;
 }
 
 .clear {
