--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5998,17 +5998,6 @@ textarea {
   border-color: #2ec866;
   color: #2ec866; }
 
-.textBox {
-  padding-bottom: 10px;
-  line-height: 2.5ex;
-  height: 15ex;
-  /* 2.5ex for each visible line */
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 6;
-  -webkit-box-orient: vertical;
-  color: grey; }
-
 .roundpanel {
   border-radius: 10px;
   padding: 0 50px 50px; }
@@ -6025,17 +6014,10 @@ textarea {
 
 .imageWrapper {
   display: inline;
-  width: 50px;
-  height: 50px;
-  margin-right: 15px;
-  float: left; }
-
-.headerWrapper {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  max-width: auto;
-  color: #1d7cf4; }
+  width: 75px;
+  height: 75px;
+  float: left;
+  margin: auto 10px auto auto; }
 
 .clear {
   clear: both; }
@@ -6060,6 +6042,70 @@ textarea {
 .profilView {
   margin: auto;
   padding-top: 40px; }
+
+.panel-pCards {
+  padding: 5px;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 1.5px;
+  border-color: grey;
+  max-width: 400px;
+  height: 210px;
+  margin: 10px auto 0px auto;
+  position: relative;
+  cursor: pointer; }
+  .panel-pCards:hover {
+    border-color: #2ec866;
+    color: #2ec866; }
+
+.footer-pCards {
+  height: 40px;
+  width: auto;
+  margin-top: -1.5px;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 1.5px;
+  border-color: grey;
+  background: #FBDA54; }
+
+.footer-text-pCards {
+  text-align: center;
+  vertical-align: middle; }
+
+.headerWrapper {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: auto;
+  text-align: center;
+  color: #1d7cf4; }
+
+.panel-pCards:hover .textBox,
+.panel-pCards:hover .headerWrapper {
+  border-color: #2ec866;
+  color: #2ec866; }
+
+.headerWrapper {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: auto;
+  color: #1d7cf4; }
+
+.infoWrapper {
+  padding-left: 15px;
+  padding-right: 15px; }
+
+.textBox {
+  padding-bottom: 10px;
+  line-height: 2.5ex;
+  height: 15ex;
+  /* 2.5ex for each visible line */
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  color: grey; }
 
 .ReactCodeMirror {
   border: 1px solid #ccc;
