fixed bug and show lines which were not shwon correctly

--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -77,4 +77,8 @@
   -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
   color: grey;
+  &:hover{
+    background-color: white;
+    overflow: visible;
+  }
 }
