--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -12,7 +12,7 @@
   border-color: grey;
   max-width: 400px;
   height: 210px;
-  margin: 10px auto 0px auto;
+  margin: 10px auto 0;
   position: relative;
   cursor: pointer;
 
@@ -25,7 +25,7 @@
 .footer-pCards {
   height: 40px;
   width: auto;
-  margin-top:-1.5px;
+  margin-top: -1.5px;
   border-style: solid;
   border-radius: 5px;
   border-width: 1.5px;
@@ -34,8 +34,12 @@
 }
 
 .footer-text-pCards {
-  text-align:center;
+  text-align: center;
   vertical-align: middle;
+  cursor:pointer;
+  &:hover{
+    color:blue;
+  }
 }
 
 .headerWrapper {
@@ -47,24 +51,20 @@
   color: #1d7cf4;
 }
 
-.panel-pCards:hover .textBox,
-.panel-pCards:hover .headerWrapper
- {
+.parent-pCards:hover .headerWrapper,
+.parent-pCards:hover .textBox {
   border-color: #2ec866;
   color: #2ec866;
 }
 
-.headerWrapper {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  max-width: auto;
-  color: #1d7cf4;
+.parent-pCards:hover .footer-pCards{
+  border-color: #2ec866;
+  background: #2ec866;
 }
 
 .infoWrapper {
-  padding-left:15px;
-  padding-right:15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .textBox {
@@ -77,8 +77,4 @@
   -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
   color: grey;
-  &:hover{
-    background-color: white;
-    overflow: visible;
-  }
 }
