--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -21,3 +21,8 @@
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, .1);
 }
+
+.imageWrapper{
+  width: auto;
+  max-height: 100%;
+}
