--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -26,3 +26,10 @@
   width: auto;
   max-height: 100%;
 }
+
+.infoWrapper {
+  padding: 5%;
+  font-family: Lato, sans-serif;
+  color: rgba(0, 0, 0, .66);
+  font-weight: 300;
+}
