--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6075,6 +6075,19 @@ textarea {
   color: rgba(0, 0, 0, 0.66);
   font-weight: 300; }
 
+.footer-pCards {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding: 2vh 1vw;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-top: 1px solid rgba(0, 0, 0, 0.1); }
+
 .ReactCodeMirror {
   border: 1px solid #ccc;
   width: 85%;
