--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -14,7 +14,7 @@
   display: -ms-flexbox;
   display: flex;
   height: 8vh;
-  padding: 7.5%;
+  padding: 1.5%;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -25,6 +25,7 @@
 .imageWrapper{
   width: auto;
   max-height: 100%;
+  margin: 0;
 }
 
 .infoWrapper {
