--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6058,7 +6058,7 @@ textarea {
   display: -ms-flexbox;
   display: flex;
   height: 8vh;
-  padding: 7.5%;
+  padding: 1.5%;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -6067,7 +6067,8 @@ textarea {
 
 .imageWrapper {
   width: auto;
-  max-height: 100%; }
+  max-height: 100%;
+  margin: 0; }
 
 .infoWrapper {
   padding: 5%;
