--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -9,6 +9,9 @@
 }
 
 .headerWrapper {
+  h3{
+    width: 100%;
+  }
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -18,7 +21,7 @@
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  align-items: center;
+  text-align: center;
   border-bottom: 1px solid rgba(0, 0, 0, .1);
 }
 
