--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6062,8 +6062,10 @@ textarea {
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  align-items: center;
+  text-align: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
+  .headerWrapper h3 {
+    width: 100%; }
 
 .imageWrapper {
   width: auto;
