cut Title of ProjectCards if to long

--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -10,6 +10,9 @@
 
 .headerWrapper {
   h3{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     width: 100%;
   }
   display: -webkit-box;
