--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6065,6 +6065,9 @@ textarea {
   text-align: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
   .headerWrapper h3 {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     width: 100%; }
 
 .imageWrapper {
